Aggiunta dei menu a tendina

--- a/main.html
+++ b/main.html
@@ -13,14 +13,67 @@
           <nav>
             <section>
                 <ul>
-                    <li class="pages"><a>NEWS</a></li>
+                    <li class="pages">
+                        <a>NEWS ▾
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Latest News</a></li>
+                                <li><a href="#">Scottish News</a></li>
+                                <li><a href="#">UK & World News</a></li>
+                                <li><a href="#">Politics</a></li>
+                                <li><a href="#">Crime</a></li>
+                                <li><a href="#">Health</a></li>
+                                <li><a href="#">Real Life</a></li>
+                                <li><a href="#">Business & Consumer</a></li>
+                                <li><a href="#">Weird News</a></li>
+                                <li><a href="#">Science & Technology</a></li>
+                                <li><a href="#">News By Area</a></li>
+                            </ul>
+                        </a></li>
                     <li class="pages"><a>POLITICS</a></li>
-                    <li class="pages"><a>FOTBALL</a></li>
-                    <li class="pages"><a>SPORT</a></li>
-                    <li class="pages"><a>TV & CELEBS</a></li>
+                    <li class="pages">
+                        <a>FOOTBALL ▾
+                            <ul class="dropdown-menu">
+                            <li><a href="#">Scottish Premiership</a></li>
+                            <li><a href="#">Scottish Championship</a></li>
+                            <li><a href="#">Scottish Cup</a></li>
+                            <li><a href="#">Premier Sports Cup</a></li>
+                            <li><a href="#">Scotland Football Team</a></li>
+                            <li><a href="#">Transfer News</a></li>
+                            <li><a href="#">English Premier League</a></li>
+                        </ul>
+                        </a></li>
+                    <li class="pages"><a>SPORT ▾
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Latest Sport</a></li>
+                            <li><a href="#">Football</a></li>
+                            <li><a href="#">Horse Racing</a></li>
+                            <li><a href="#">Rugby</a></li>
+                            <li><a href="#">Golf</a></li>
+                            <li><a href="#">Tennis</a></li>
+                            <li><a href="#">Boxing</a></li>
+                            <li><a href="#">Darts</a></li>
+                        </ul>
+                    </a></li>
+                    <li class="pages"><a>TV & CELEBS ▾
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Latest Celebs</a></li>
+                            <li><a href="#">Celebrity News</a></li>
+                            <li><a href="#">TV & Radio News</a></li>
+                            <li><a href="#">Celebrity Interviews</a></li>
+                        </ul>
+                    </a></li>
                     <li class="pages"><a>LIFE & STILE</a></li>
-                    <li class="pages"><a>PARTNER STORIES</a></li>
-                    <li class="pages"><a>MORE</a></li>
+                    <li class="pages" id="partnerStories"><a>PARTNER STORIES</a></li>
+                    <li class="pages"><a>MORE ▾
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Partner Stories</a></li>
+                            <li><a href="#">Legal Matters</a></li>
+                            <li><a href="#">Scotland Now</a></li>
+                            <li><a href="#">In Your Area</a></li>
+                            <li><a href="#">Business</a></li>
+                            <li><a href="#">Travel</a></li>
+                        </ul>
+                    </a></li>
                 </ul>
             </section>
           </nav>
