Aggiunta di alcune notizie

--- a/main.html
+++ b/main.html
@@ -244,54 +244,188 @@
                   <img src="media/800x450.svg">
               </div>
           </div>
-          <div class="News">
-              <img src="media/220x145.svg">
-              <div>
-                  <a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at ante blandit, volutpat tellus.</a>
-              </div>
-              <div class="info-container">
-                  <div class="label-container">
-                      <div>
-                          <a class="label">SNP</a>
+          <div class="container-large-news">
+              <div class="large-news">
+                  <img src="media/220x145.svg">
+                  <div>
+                      <a>Vivamus feugiat neque lorem, ac volutpat metus dictum vel. Fusce malesuada ultricies nisl a.</a>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">4</a>
+                          </div>
                       </div>
-                      <div class="vertical-line"></div>
-                      <div class="comments-count">
-                          <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
-                          <a class="label">9</a>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
                       </div>
                   </div>
-                  <div class="bookmark">
-                      <a>Bookmark</a>
-                      <a>
-                          <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                      </a>
+              </div>
+              <div class="large-news">
+                  <img src="media/220x145.svg">
+                  <div>
+                      <a>Sed eget porta purus, vel efficitur nibh. Aliquam finibus pellentesque tellus, ac accumsan mi posuere at.</a>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">2</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
                   </div>
               </div>
           </div>
-          <div class="News">
-              <img src="media/220x145.svg">
-              <div>
-                  <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis massa a ante.</a>
-              </div>
-              <div class="info-container">
-                  <div class="label-container">
-                      <div>
-                          <a class="label">SNP</a>
+          <div class="container-large-news">
+              <div class="large-news">
+                  <img src="media/220x145.svg">
+                  <div>
+                      <a>Quisque sed dapibus odio. Nulla interdum, elit et porttitor placerat, arcu metus.</a>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">10</a>
+                          </div>
                       </div>
-                      <div class="vertical-line"></div>
-                      <div class="comments-count">
-                          <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
-                          <a class="label">9</a>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
                       </div>
                   </div>
-                  <div class="bookmark">
-                      <a>Bookmark</a>
-                      <a>
-                          <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                      </a>
+              </div>
+              <div class="large-news">
+                  <img src="media/220x145.svg">
+                  <div>
+                      <a>Duis sodales quis lorem nec porta. In sodales tellus vitae metus euismod ullamcorper. Donec.</a>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">5</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
                   </div>
               </div>
           </div>
+          <div class="small-news-column">
+          <div class="small-news">
+              <div class="container-small-news">
+                  <div>
+                      <img src="media/150x100.svg">
+                  </div>
+                  <div class="headline-snc">
+                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque leo tellus.</a>
+                  </div>
+              </div>
+              <div class="bookmark">
+                  <a>Bookmark</a>
+                  <a>
+                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                  </a>
+              </div>
+          </div>
+          <div class="small-news">
+              <div class="container-small-news">
+                  <div>
+                      <img src="media/150x100.svg">
+                  </div>
+                  <div class="headline-snc">
+                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida.</a>
+                  </div>
+              </div>
+              <div class="bookmark">
+                  <a>Bookmark</a>
+                  <a>
+                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                  </a>
+              </div>
+          </div>
+          <div class="small-news">
+              <div class="container-small-news">
+                  <div>
+                      <img src="media/150x100.svg">
+                  </div>
+                  <div class="headline-snc">
+                      <a>Donec nec euismod augue. Orci varius natoque penatibus.</a>
+                  </div>
+              </div>
+              <div class="bookmark">
+                  <a>Bookmark</a>
+                  <a>
+                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                  </a>
+              </div>
+          </div>
+          <div class="small-news">
+              <div class="container-small-news">
+                  <div>
+                      <img src="media/150x100.svg">
+                  </div>
+                  <div class="headline-snc">
+                      <a>Quisque ante elit, fermentum ut tortor in, dignissim condimentum purus. Ut leo.</a>
+                  </div>
+              </div>
+              <div class="bookmark">
+                  <a>Bookmark</a>
+                  <a>
+                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                  </a>
+              </div>
+          </div>
+          <div class="small-news">
+              <div class="container-small-news">
+                  <div>
+                      <img src="media/150x100.svg">
+                  </div>
+                  <div class="headline-snc">
+                      <a>Maecenas non fringilla tellus. In vel pellentesque quam, non iaculis quam.</a>
+                  </div>
+              </div>
+              <div class="bookmark">
+                  <a>Bookmark</a>
+                  <a>
+                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                  </a>
+              </div>
+          </div>
+      </div>
       </div>
 </body>
 </html>
