implementazione ridimensionamento notizie

--- a/main.html
+++ b/main.html
@@ -129,10 +129,14 @@
                   </a>
               </div>
           </div>
-          <div class="News">
-              <img src="media/220x145.svg">
-              <div>
-                  <a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at ante blandit, volutpat tellus.</a>
+          <div class="news">
+              <div class="container2-large-news">
+                  <div>
+                      <img src="media/220x145.svg">
+                  </div>
+                  <div>
+                      <a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at ante blandit, volutpat tellus.</a>
+                  </div>
               </div>
               <div class="info-container">
                   <div class="label-container">
@@ -153,10 +157,14 @@
                   </div>
               </div>
           </div>
-          <div class="News">
-              <img src="media/220x145.svg">
-              <div>
-                  <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis massa a ante.</a>
+          <div class="news">
+              <div class="container2-large-news">
+                  <div>
+                      <img src="media/220x145.svg">
+                  </div>
+                  <div>
+                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis massa a ante.</a>
+                  </div>
               </div>
               <div class="info-container">
                   <div class="label-container">
@@ -177,10 +185,14 @@
                   </div>
               </div>
           </div>
-          <div class="News">
-              <img src="media/220x145.svg">
-              <div>
-                  <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent efficitur egestas posuere.</a>
+          <div class="news">
+              <div class="container2-large-news">
+                  <div>
+                      <img src="media/220x145.svg">
+                  </div>
+                  <div>
+                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent efficitur egestas posuere.</a>
+                  </div>
               </div>
               <div class="info-container">
                   <div class="label-container">
@@ -201,11 +213,15 @@
                   </div>
               </div>
           </div>
-          <div class="News">
-          <img src="media/220x145.svg">
-          <div>
-              <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat ligula mauris, a feugiat.</a>
-          </div>
+          <div class="news">
+              <div class="container2-large-news">
+                  <div>
+                      <img src="media/220x145.svg">
+                  </div>
+                  <div>
+                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat ligula mauris, a feugiat.</a>
+                  </div>
+              </div>
           <div class="info-container">
               <div class="label-container">
                   <div>
@@ -226,7 +242,7 @@
           </div>
       </div>
           <div class="second-main-news">
-              <div class="d-flex flex-column">
+              <div class="container-smn">
                   <div class="headline-smn">
                       <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pellentesque sollicitudin.</a>
                   </div>
@@ -246,9 +262,13 @@
           </div>
           <div class="container-large-news">
               <div class="large-news">
-                  <img src="media/220x145.svg">
-                  <div>
-                      <a>Vivamus feugiat neque lorem, ac volutpat metus dictum vel. Fusce malesuada ultricies nisl a.</a>
+                  <div class="container2-large-news">
+                      <div>
+                        <img src="media/220x145.svg">
+                      </div>
+                      <div>
+                          <a>Vivamus feugiat neque lorem, ac volutpat metus dictum vel. Fusce malesuada ultricies nisl a.</a>
+                      </div>
                   </div>
                   <div class="info-container">
                       <div class="label-container">
@@ -270,9 +290,13 @@
                   </div>
               </div>
               <div class="large-news">
-                  <img src="media/220x145.svg">
-                  <div>
-                      <a>Sed eget porta purus, vel efficitur nibh. Aliquam finibus pellentesque tellus, ac accumsan mi posuere at.</a>
+                  <div class="container2-large-news">
+                      <div>
+                        <img src="media/220x145.svg">
+                      </div>
+                      <div>
+                          <a>Sed eget porta purus, vel efficitur nibh. Aliquam finibus pellentesque tellus, ac accumsan mi posuere at.</a>
+                      </div>
                   </div>
                   <div class="info-container">
                       <div class="label-container">
@@ -296,9 +320,13 @@
           </div>
           <div class="container-large-news">
               <div class="large-news">
-                  <img src="media/220x145.svg">
-                  <div>
-                      <a>Quisque sed dapibus odio. Nulla interdum, elit et porttitor placerat, arcu metus.</a>
+                  <div class="container2-large-news">
+                      <div>
+                        <img src="media/220x145.svg">
+                      </div>
+                      <div>
+                          <a>Quisque sed dapibus odio. Nulla interdum, elit et porttitor placerat, arcu metus.</a>
+                      </div>
                   </div>
                   <div class="info-container">
                       <div class="label-container">
@@ -320,9 +348,13 @@
                   </div>
               </div>
               <div class="large-news">
-                  <img src="media/220x145.svg">
-                  <div>
-                      <a>Duis sodales quis lorem nec porta. In sodales tellus vitae metus euismod ullamcorper. Donec.</a>
+                  <div class="container2-large-news">
+                      <div>
+                        <img src="media/220x145.svg">
+                      </div>
+                      <div>
+                          <a>Duis sodales quis lorem nec porta. In sodales tellus vitae metus euismod ullamcorper. Donec.</a>
+                      </div>
                   </div>
                   <div class="info-container">
                       <div class="label-container">
@@ -345,87 +377,147 @@
               </div>
           </div>
           <div class="small-news-column">
-          <div class="small-news">
-              <div class="container-small-news">
-                  <div>
-                      <img src="media/150x100.svg">
+              <div class="small-news">
+                  <div class="container-small-news">
+                      <div>
+                          <img src="media/150x100.svg">
+                      </div>
+                      <div class="headline-snc">
+                          <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque leo tellus.</a>
+                      </div>
                   </div>
-                  <div class="headline-snc">
-                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque leo tellus.</a>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">5</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
                   </div>
               </div>
-              <div class="bookmark">
-                  <a>Bookmark</a>
-                  <a>
-                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                  </a>
+              <div class="small-news">
+                  <div class="container-small-news">
+                      <div>
+                          <img src="media/150x100.svg">
+                      </div>
+                      <div class="headline-snc">
+                          <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida.</a>
+                      </div>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">7</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="small-news">
+                  <div class="container-small-news">
+                      <div>
+                          <img src="media/150x100.svg">
+                      </div>
+                      <div class="headline-snc">
+                          <a>Donec nec euismod augue. Orci varius natoque penatibus.</a>
+                      </div>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">1</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="small-news">
+                  <div class="container-small-news">
+                      <div>
+                          <img src="media/150x100.svg">
+                      </div>
+                      <div class="headline-snc">
+                          <a>Quisque ante elit, fermentum ut tortor in, dignissim condimentum purus. Ut leo.</a>
+                      </div>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">11</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="small-news">
+                  <div class="container-small-news">
+                      <div>
+                          <img src="media/150x100.svg">
+                      </div>
+                      <div class="headline-snc">
+                          <a>Maecenas non fringilla tellus. In vel pellentesque quam, non iaculis quam.</a>
+                      </div>
+                  </div>
+                  <div class="info-container">
+                      <div class="label-container">
+                          <div>
+                              <a class="label">SNP</a>
+                          </div>
+                          <div class="vertical-line"></div>
+                          <div class="comments-count">
+                              <img src="node_modules/bootstrap-icons/icons/chat-left-text.svg">
+                              <a class="label">3</a>
+                          </div>
+                      </div>
+                      <div class="bookmark">
+                          <a>Bookmark</a>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
+                          </a>
+                      </div>
+                  </div>
               </div>
           </div>
-          <div class="small-news">
-              <div class="container-small-news">
-                  <div>
-                      <img src="media/150x100.svg">
-                  </div>
-                  <div class="headline-snc">
-                      <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida.</a>
-                  </div>
-              </div>
-              <div class="bookmark">
-                  <a>Bookmark</a>
-                  <a>
-                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                  </a>
-              </div>
-          </div>
-          <div class="small-news">
-              <div class="container-small-news">
-                  <div>
-                      <img src="media/150x100.svg">
-                  </div>
-                  <div class="headline-snc">
-                      <a>Donec nec euismod augue. Orci varius natoque penatibus.</a>
-                  </div>
-              </div>
-              <div class="bookmark">
-                  <a>Bookmark</a>
-                  <a>
-                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                  </a>
-              </div>
-          </div>
-          <div class="small-news">
-              <div class="container-small-news">
-                  <div>
-                      <img src="media/150x100.svg">
-                  </div>
-                  <div class="headline-snc">
-                      <a>Quisque ante elit, fermentum ut tortor in, dignissim condimentum purus. Ut leo.</a>
-                  </div>
-              </div>
-              <div class="bookmark">
-                  <a>Bookmark</a>
-                  <a>
-                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                  </a>
-              </div>
-          </div>
-          <div class="small-news">
-              <div class="container-small-news">
-                  <div>
-                      <img src="media/150x100.svg">
-                  </div>
-                  <div class="headline-snc">
-                      <a>Maecenas non fringilla tellus. In vel pellentesque quam, non iaculis quam.</a>
-                  </div>
-              </div>
-              <div class="bookmark">
-                  <a>Bookmark</a>
-                  <a>
-                      <img src="node_modules/bootstrap-icons/icons/bookmark.svg">
-                  </a>
-              </div>
-          </div>
-      </div>
       </div>
 </body>
 </html>
