--- a/main.html
+++ b/main.html
@@ -518,6 +518,79 @@
                   </div>
               </div>
           </div>
+          <div class="footer">
+              <div class="footer-section">
+                  <a>news</a>
+                  <a>sport</a>
+                  <a>celebs</a>
+                  <a>life & style</a>
+              </div>
+              <div class="footer-social">
+                  <div>
+                      <a>follow us</a>
+                  </div>
+                  <div class="social-container">
+                      <div>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/facebook.svg">
+                          </a>
+                      </div>
+                      <div>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/twitter.svg">
+                          </a>
+                      </div>
+                      <div>
+                          <a>
+                              <img src="node_modules/bootstrap-icons/icons/instagram.svg">
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="footer-kitemarks">
+                  <a>
+                      <img src="media/75x30.svg">
+                  </a>
+                  <a>
+                      <img src="media/75x30.svg">
+                  </a>
+              </div>
+              <div class="footer-links">
+                  <ul>
+                      <li>mynewsassistant</li>
+                      <li>In Your Area</li>
+                      <li>About Us</li>
+                      <li>Contact Us</li>
+                      <li>Work for us</li>
+                      <li>Got A Story?</li>
+                      <li>Local News</li>
+                      <li>Cookie Notice</li>
+                      <li>Advertising</li>
+                      <li>Marketplace</li>
+                      <li>Book an Ad</li>
+                      <li>Public Notices</li>
+                      <li>Discount Codes</li>
+                      <li>Beauty Box Subscription</li>
+                      <li>Jobs</li>
+                      <li>Buy a Photo</li>
+                      <li>Competition Rules</li>
+                      <li>How to Complain</li>
+                      <li>Corrections & Clarifications</li>
+                      <li>Google Survey</li>
+                      <li>Privacy Notice</li>
+                      <li>AI Notice</li>
+                      <li>Sunday Mail Centenary Fund</li>
+                      <li>Paper Subscription to the Daily Record and Sunday Mail</li>
+                      <li>Paper Subscription to the Paisley Daily Express</li>
+                      <li>Newsletters Signup</li>
+                      <li>Syndication & Licensing</li>
+                      <li>Terms and Conditions</li>
+                      <li>Notifications and alerts help</li>
+                      <li>Do not sell or share my data</li>
+                      <li>© 2024 Scottish Daily Record and Sunday Mail Ltd</li>
+                  </ul>
+              </div>
+          </div>
       </div>
 </body>
 </html>
